data/all_generated_tests/raw_wast_tests/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3097.wast
;; 6. **Test 6: Interrupt Handling During Return**   Simulate an interrupt during the execution of an imported function. Check if both engines correctly pause and resume the function, ensuring the stack is unwound properly when the imported function returns.   **Constraint**: Ensure the return correctly processes any stack and operand state changes introduced by the interrupt.   **Relation to Incorrect Handling of Control Flow**: Validates control flow interruptions across module boundaries.

(assert_invalid
  (module
    (func $interrupt-during-return (result i32)
      (call $imported-func)
      (return (i32.const 42))
    )
    (func (import "env" "imported-func"))
  )
  "type mismatch"
)